--- a/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
+++ b/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
@@ -38,9 +38,6 @@ dfg_rs <-
   read_rds("D:/data/gallup/exports/dfg_rs.rds")
 
 dfg_rs <-
-  read_rds("/Users/djolear/Google Drive/research/projects/gallup/gallup_data/relative_status/dfg_rs.rds")
-
-dfg_rs <-
   dfg_rs %>% 
   mutate_at(
     vars(
@@ -194,9 +191,9 @@ summary(lm1)
 ```{r}
 lm1 <-
   glm(
-    depression ~
+    hbp ~
       raw_income_scale +
-      median_income_demo_scale +
+      median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
       median_monthly_housing_cost_county_scale +
@@ -209,7 +206,7 @@ lm1 <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(depression = ifelse(depression == 1, 1, ifelse(depression == 2, 0, NA)))
+    data = dfg_rs %>% mutate(hbp = ifelse(hbp == 1, 1, ifelse(hbp == 2, 0, NA)))
   )
 
 summary(lm1)
@@ -236,6 +233,56 @@ lm1 <-
 
 summary(lm1)
 ```
+
+
+### Depression
+
+```{r}
+lm1 <-
+  glm(
+    depression ~
+      raw_income_scale +
+      median_income_county_scale +
+      physicians_scale +
+      unweighted_pop_county_scale +
+      median_monthly_housing_cost_county_scale +
+      land_area_2010_scale +
+      education_scale +
+      employment_all +
+      sex +
+      age_scale +
+      race +
+      married + 
+      year,
+    family = "binomial",
+    data = dfg_rs %>% mutate(depression = ifelse(depression == 1, 1, ifelse(depression == 2, 0, NA)))
+  )
+
+summary(lm1)
+
+lm1 <-
+  glm(
+    depression ~
+      raw_income_scale +
+      median_income_demo_scale +
+      physicians_scale +
+      unweighted_pop_county_scale +
+      median_monthly_housing_cost_county_scale +
+      land_area_2010_scale +
+      education_scale +
+      employment_all +
+      sex +
+      age_scale +
+      race +
+      married + 
+      year,
+    family = "binomial",
+    data = dfg_rs %>% mutate(depression = ifelse(depression == 1, 1, ifelse(depression == 2, 0, NA)))
+  )
+
+summary(lm1)
+```
+
 
 
 ### Obesity
