--- a/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
+++ b/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
@@ -171,7 +171,7 @@ lm1 <-
       unweighted_pop_county_scale +
       median_monthly_housing_cost_county_scale +
       land_area_2010_scale +
-      education_scale +
+      #education_scale +
       employment_all +
       sex +
       age_scale +
